Fixed padding causing issues on safari (#70)

--- a/src/App.css
+++ b/src/App.css
@@ -235,13 +235,7 @@
 }
 
 .explanation {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   font-family: Lexend, Arial, Helvetica, sans-serif;
-  margin-top: 0;
-  padding: 1em;
-  max-width: 60vw;
 }
 
 .image {
@@ -335,8 +329,10 @@
 .picture-text {
   display: flex;
   flex-direction: column;
+  align-items: center;
   background-color: rgba(var(--background-gradient), .6);
   border-radius: 10px;
+  max-width: 1200px;
 }
 
 .reference {
